# xpl_cpp

./: CMakeLists.txt  main.cpp
cpp_primer/: CDemo.c  Utils.cpp  s01_05.cpp  s01_15.cpp  s12_15.cpp  s12_19.cpp  s12_20.cpp  s12_21.cpp  s12_21_01.cpp  s12_22.cpp
music/: QiFengLe.cpp
patch/: SC806_A7_系统竖屏显示改横屏.patch  SC806屏幕横屏修改.patch  la0922-touchsceen.dtsi  patch_000.edit  patch_001_BootAnimation_cpp.edit  patch_002_RotationPolicy_java.edit  prog_emmc_firehose_8909_ddr.mbn  rawprogram0_update.xml
