cmake_minimum_required(VERSION 3.21)
project(_xpl_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(_xpl_cpp
#        main.cpp
#        music/QiFengLe.cpp cpp_primer/s12_15.cpp
        cpp_primer/Utils.cpp
#        cpp_primer/s12_19.cpp
#        cpp_primer/s12_20.cpp
#        cpp_primer/s12_21.cpp
#        cpp_primer/CDemo.c
#        cpp_primer/s12_21_01.cpp
#        cpp_primer/s12_22.cpp
#        cpp_primer/s01_05.cpp
        cpp_primer/s01_15.cpp)
